apps/glance/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.33.0/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
  labels:
    app.kubernetes.io/name: glance
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: glance
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glance
    spec:
      containers:
        - name: glance
          image: "docker.io/glanceapp/glance:v0.8.4"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - mountPath: /app/config/glance.yml
              name: glance-config-files
              subPath: glance.yml
      volumes:
        - name: glance-config-files
          configMap:
            name: glance-config-files
