apps/glance/service.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.33.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app.kubernetes.io/name: glance
